resources/public/api/conf/1.0/testdata/bonus-payment.md
<table>
    <col width="25%">
    <col width="35%">
    <col width="40%">
    <thead>
        <tr>
            <th>Scenario</th>
            <th>Request Payload</th>
            <th>Response</th>
        </tr>
    </thead>
    <tbody>
        <tr>
            <td>
              <p>Request with a valid payload, LISA Manager reference number and account ID</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1234567890</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">201 (Created)</code></p>
                <p class ="code--block"> {<br>
                                           "status": 201,<br>
                                           "success": true,<br>
                                           "data": {<br>
                                             "message": "Bonus transaction created",<br>
                                             "transactionId": "7777777777"<br>
                                           }<br>
                                       }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request with a valid payload, LISA Manager reference number and account ID (late notification)</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 0000000905</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234569871",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">201 (Created)</code></p>
                <p class ="code--block"> {<br>
                                           "status": 201,<br>
                                           "success": true,<br>
                                           "data": {<br>
                                             "message": "Bonus transaction created - late notification",<br>
                                             "transactionId": "8888888888"<br>
                                           }<br>
                                       }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request with a valid payload, LISA Manager reference number and account ID (regular bonus)</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1234567890</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Regular Bonus"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">201 (Created)</code></p>
                <p class ="code--block"> {<br>
                                           "status": 201,<br>
                                           "success": true,<br>
                                           "data": {<br>
                                             "message": "Bonus transaction created",<br>
                                             "transactionId": "7777777777"<br>
                                           }<br>
                                       }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request with a valid payload and account ID, but an invalid LISA Manager reference number</p>
              <p class ="code--block">lisaManagerReferenceNumber: 123456<br>accountId: 1234567890</p></td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">400 (Bad Request)</code></p>
                <p class ="code--block"> {<br>
                    "code": "BAD_REQUEST",<br>
                    "message": "lisaManagerReferenceNumber in the URL is in the wrong format"<br>
                  }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request with a valid payload and LISA Manager reference number, but an invalid account ID</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1234%3D5678</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">400 (Bad Request)</code></p>
                            <p class ="code--block"> {<br>
                                "code": "BAD_REQUEST",<br>
                                "message": "accountId in the URL is in the wrong format"<br>
                              }
                            </p>
                        </td>
        </tr>
        <tr>
        	 <td>
            <p>Request containing invalid and/or missing data</p>
            <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
            accountId: 1234567890</p>
          </td>
	        <td>
	            <p class ="code--block">{<br>
	"lifeEventId": true,<br>
	"periodStartDate": "2017-04-06",<br>
	"periodEndDate": "05-05-2017",<br>
	"htbTransfer": {<br>
		"htbTransferInForPeriod": 5.50,<br>
		"htbTransferTotalYTD": 5.5001<br>
	},<br>
	"inboundPayments": {<br>
		"newSubsForPeriod": 4000.00,<br>
		"newSubsYTD": 4000.00,<br>
		"totalSubsForPeriod": 40000.00,<br>
		"totalSubsYTD": 40000.00<br>
	},<br>
	"bonuses": {<br>
		"bonusPaidYTD": 0.0,<br>
		"bonusDueForPeriod": 10000.00,<br>
		"claimReason": "X"<br>
	}<br>
}
	            </p>
	        </td>
	        <td><p>HTTP status: <code class="code--slim">400 (Bad Request)</code></p>
	            <p class ="code--block"> {<br>
  "code": "BAD_REQUEST",<br>
  "message": "Bad Request",<br>
  "errors": [<br>
    {<br>
      "code": "INVALID_MONETARY_AMOUNT",<br>
      "message": "Amount cannot be negative, and can only have up to 2 decimal places",<br>
      "path": "/htbTransfer/htbTransferTotalYTD"<br>
    },<br>
    {<br>
      "code": "INVALID_DATA_TYPE",<br>
      "message": "Invalid data type has been used",<br>
      "path": "/lifeEventId"<br>
    },<br>
    {<br>
      "code": "MISSING_FIELD",<br>
      "message": "This field is required",<br>
      "path": "/bonuses/totalBonusDueYTD"<br>
    },<br>
    {<br>
      "code": "INVALID_FORMAT",<br>
      "message": "Invalid format has been used",<br>
      "path": "/bonuses/claimReason"<br>
    },<br>
    {<br>
      "code": "INVALID_DATE",<br>
      "message": "Date is invalid",<br>
      "path": "/periodEndDate"<br>
    }<br>
  ]<br>
}
	            </p>
	        </td>
        </tr>
        <tr>
            <td>
              <p>Request with invalid monetary amounts and/or invalid dates</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1234567890</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                     "lifeEventId": "1234567891",<br>
                     "periodStartDate": "9999-04-05",<br>
                     "periodEndDate": "2016-06-05",<br>
                     "htbTransfer": {<br>
                         "htbTransferInForPeriod": 0.00,<br>
                         "htbTransferTotalYTD": 0.00<br>
                     },<br>
                     "inboundPayments": {<br>
                         "newSubsForPeriod": 0.00,<br>
                         "newSubsYTD": 0.00,<br>
                         "totalSubsForPeriod": 0.0,<br>
                         "totalSubsYTD": 0.00<br>
                     },<br>
                     "bonuses": {<br>
                         "bonusPaidYTD": 0.0,<br>
                         "bonusDueForPeriod": 0.0,<br>
                         "totalBonusDueYTD": 0.0,<br>
                         "claimReason": "Life Event"<br>
                     }<br>
                 } 
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">403 (Forbidden)</code></p>
                <p class ="code--block"> {<br>
                      "code": "FORBIDDEN",<br>
                      "message": "There is a problem with the request data",<br>
                      "errors": [<br>
                          {<br>
                              "code": "INVALID_MONETARY_AMOUNT",<br>
                              "message": "newSubsForPeriod and htbTransferInForPeriod cannot both be 0",<br>
                              "path": "/inboundPayments/newSubsForPeriod"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_MONETARY_AMOUNT",<br>
                              "message": "newSubsForPeriod and htbTransferInForPeriod cannot both be 0",<br>
                              "path": "/htbTransfer/htbTransferInForPeriod"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_MONETARY_AMOUNT",<br>
                              "message": "totalSubsForPeriod must be more than 0",<br>
                              "path": "/inboundPayments/totalSubsForPeriod"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_MONETARY_AMOUNT",<br>
                              "message": "bonusDueForPeriod must be more than 0",<br>
                              "path": "/bonuses/bonusDueForPeriod"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_MONETARY_AMOUNT",<br>
                              "message": "totalBonusDueYTD must be more than 0",<br>
                              "path": "/bonuses/totalBonusDueYTD"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_DATE",<br>
                              "message": "The periodStartDate must be the 6th day of the month",<br>
                              "path": "/periodStartDate"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_DATE",<br>
                              "message": "The periodEndDate must be the 5th day of the month which occurs after the periodStartDate",<br>
                              "path": "/periodEndDate"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_DATE",<br>
                              "message": "The periodStartDate may not be a future date",<br>
                              "path": "/periodStartDate"<br>
                          },<br>
                          {<br>
                              "code": "INVALID_DATE",<br>
                              "message": "The periodEndDate cannot be before 6 April 2017",<br>
                              "path": "/periodEndDate"<br>
                          }<br>
                      ]<br>
                  }
                </p>
            </td>
        </tr>
        <tr>
        	 <td>
            <p>Request with a 'claimReason' of 'Life Event', but without a lifeEventId</p>
            <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
            accountId: 1234567890</p>
           </td>
            <td>
                <p class ="code--block"> {<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
	        <td><p>HTTP status: <code class="code--slim">403 (Forbidden)</code></p>
	            <p class ="code--block"> {<br>
	                                        "code": "LIFE_EVENT_NOT_PROVIDED",<br>
	                                        "message": "lifeEventId is required when the claimReason is a life event"<br>
	                                      }
	            </p>
	        </td>
        </tr>
       <tr>
            <td>
              <p>Request containing invalid bonus payment figures</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 0000000403</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">403 (Forbidden)</code></p>
                <p class ="code--block"> {<br>
                                           "code": "BONUS_CLAIM_ERROR",<br>
                                           "message": "The bonus amount given is above the maximum annual amount, or the qualifying deposits are above the maximum annual amount or the bonus claim does not equal the correct percentage of qualifying funds"<br>
                                       }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request for an account that has already been closed or voided</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 0000000903</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">403 (Forbidden)</code></p>
                <p class ="code--block"> {<br>"code": "INVESTOR_ACCOUNT_ALREADY_CLOSED_OR_VOID",<br>
                                            "message": "This LISA account has already been closed or been made void by HMRC"<br>
                                          }
                </p>
            </td>
       </tr>
        <tr>
            <td>
              <p>Request containing a life event ID that does not exist</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1000000404</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">404 (Not Found)</code></p>
                <p class ="code--block"> {<br>
                                           "code": "LIFE_EVENT_NOT_FOUND",<br>
                                           "message": "The lifeEventId does not match with HMRC’s records"<br>
                                       }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request containing an account ID that does not exist</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a>
              <br>accountId: 0000000404</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">404 (Not Found)</code></p>
                <p class ="code--block"> {<br>
                                            "code": "INVESTOR_ACCOUNTID_NOT_FOUND",<br>
                                            "message": "The accountId does not match HMRC’s records"<br>
                                          }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request for a bonus claim that has already been requested</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a>
              <br>accountId: 0000000409</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">409 (Conflict)</code></p>
                <p class ="code--block"> {<br>
                                            "code": "BONUS_CLAIM_ALREADY_EXISTS",<br>
                                            "message": "The investor's bonus payment has already been requested"<br>
                                          }
                </p>
            </td>
        </tr>
        <tr>
            <td>
              <p>Request with an invalid 'Accept' header</p>
              <p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>
              accountId: 1234567890<br><br>
              Accept: application/vnd.hmrc.1.0</p>
            </td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">406 (Not Acceptable)</code></p>
                <p class ="code--block"> {<br>
                                            "code": "ACCEPT_HEADER_INVALID",<br>
                                            "message": "The accept header is missing or invalid"<br>
                                          }
                </p>
            </td>
        </tr>
        <tr>
            <td><p>Request with a valid payload, LISA Manager reference number and account ID</p><p class ="code--block">lisaManagerReferenceNumber: <a href="https://test-developer.service.hmrc.gov.uk/api-documentation/docs/api/service/lisa-api/1.0#testing-the-api">Use your test user profile</a><br>accountId: 1234567890</p></td>
            <td>
                <p class ="code--block"> {<br>
                                               "lifeEventId": "1234567891",<br>
                                               "periodStartDate": "2017-04-06",<br>
                                               "periodEndDate": "2017-05-05",<br>
                                               "htbTransfer": {<br>
                                                  "htbTransferInForPeriod": 0.00,<br>
                                                  "htbTransferTotalYTD": 0.00<br>
                                               },<br>
                                               "inboundPayments": {<br>
                                                 "newSubsForPeriod": 4000.00,<br>
                                                 "newSubsYTD": 4000.00,<br>
                                                 "totalSubsForPeriod": 40000.00,<br>
                                                 "totalSubsYTD": 40000.00<br>
                                               },<br>
                                               "bonuses": {<br>
                                                 "bonusPaidYTD": 0.0,<br>
                                                 "bonusDueForPeriod": 10000.00,<br>
                                                 "totalBonusDueYTD": 10000.00,<br>
                                                 "claimReason": "Life Event"<br>
                                               }<br>
                                             }
                </p>
            </td>
            <td><p>HTTP status: <code class="code--slim">409 (Conflict)</code></p>
                <p class ="code--block"> {<br>
                                            "code": "BONUS_CLAIM_ALREADY_EXISTS",<br>
                                            "message": "The investor's bonus payment has already been requested",<br>
                                            "id": "7777777777"<br>
                                          }
                </p>
            </td>
        </tr>
	</tbody>
</table>
